# syntactually

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: ci.yml
bash/: basics.sh
cpp/: Makefile  README.md  basics.cpp
markdown/: README.md  basics.md
outputs/: bash_awk.txt  perl_basics.txt  python_basics.txt
python/: Makefile  jupyter.ipynb  pyproject.toml
tests/: README.md  conftest.py  test_outputs.py  test_scripts_syntax.py
zsh/: Makefile  README.md
